<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leskovskij.androidcourse.MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <Button
                android:id="@+id/buttonCW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW1_name" />

            <Button
                android:id="@+id/buttonHW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW1_name" />

            <Button
                android:id="@+id/buttonCW4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW4_name" />

            <Button
                android:id="@+id/buttonHW4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW4_name" />

            <Button
                android:id="@+id/buttonCW5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW5_name" />

            <Button
                android:id="@+id/buttonHW5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW5_name" />

            <Button
                android:id="@+id/buttonCW6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW6_name" />

            <Button
                android:id="@+id/buttonHW6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW6_name" />

        </GridLayout>
    </ScrollView>

    <TabHost
        android:layout_width="200dip"
        android:layout_height="300dip"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>

